--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="main.css"></head>
 <body>
     <!-- Write your comments here --> 
+        <!-- Write your comments here --> 
 <!-- Write your comments here --> 
     <div class="bg">
     <div class="jumbotron text-center">
