--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="card-body">
                 <h5 class="card-title">Mario</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="webgames/mario/index.html" class="btn btn-grey">PLAY NOW</a>
+                <a href="/mario/index.html" class="btn btn-grey">PLAY NOW</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
@@ -47,7 +47,7 @@
             <div class="card-body">
                 <h5 class="card-title">Flappy Bird</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="/var/www/html/webgames/flappybird/index.html" class="btn btn-grey">PLAY NOW</a>
+                <a href="/flappybird/index.html" class="btn btn-grey">PLAY NOW</a>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
