--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     </div>
         <div class="container p-3  my-3 ">
     <div class="row">
-        <div class="card" style="width: 18rem;">
+  <!--      <div class="card" style="width: 18rem;">
             <img class="card-img-top" src="image/contra.jpeg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Contra</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <a href="webgames/contra/contra-client/index.html" class="btn btn-grey">PLAY NOW</a>
             </div>
-        </div>
+        </div> -->
         <div class="card" style="width: 18rem;">
             <img class="card-img-top" src="image/mario.jpeg" alt="Card image cap">
             <div class="card-body">
